# pc_agent

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: backend.yml  extension.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  agentic.py  config.py  deps.py  llm.py  main.py  processor.py  prompts.py  rag.py  schemas.py  sessions.py  store.py  tools.py
backend/tests/: conftest.py  test_agentic.py  test_chunks_and_search.py  test_endpoints.py  test_health.py  test_llm_parsers.py  test_processor.py  test_rag.py  test_sessions.py  test_store.py
extension/: eslint.config.js  manifest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/src/background/: sw.ts
extension/src/content/: capture.ts
extension/src/lib/: api.ts  messages.ts  queryLoop.ts  storage.ts  types.ts
extension/src/panel/: ActivityTab.tsx  App.css  App.tsx  AskTab.tsx  index.html  main.tsx
scripts/: setup-git-identity.sh
